Fix collapsible section header spacing/color without javascript

--- a/css/skin/Carbon/toteskin.css
+++ b/css/skin/Carbon/toteskin.css
@@ -226,6 +226,7 @@ div.selected {
 
 #linksSection .sectionHeader {
 	background-color: #8b858f;
+	color: #ededef;
 }
 
 #linksSection .sectionHeader a {
