--- a/css/skin/Horsepower/toteskin.css
+++ b/css/skin/Horsepower/toteskin.css
@@ -226,6 +226,7 @@ div.selected {
 
 #linksSection .sectionHeader {
 	background-color: #fe0000;
+	color: #fff;
 }
 
 #linksSection .sectionHeader a {
